update code for Public ecr access

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,29 +38,31 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y jq unzip
 
+      # Configure AWS credentials
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v3
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Login to Amazon ECR
+      # Login to Amazon ECR Public
+      - name: Login to Amazon ECR Public
         id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
+        run: |
+          aws ecr-public get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin ${{ secrets.AWS_ECR_LOGIN_URI }}
 
-      - name: Build, tag, and push image to Amazon ECR
-        id: build-image
+      # Build, tag, and push Docker image
+      - name: Build, tag, and push image
         env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY_NAME }}
+          ECR_LOGIN_URI: ${{ secrets.AWS_ECR_LOGIN_URI }}
+          ECR_REPOSITORY_NAME: ${{ secrets.ECR_REPOSITORY_NAME }}
           IMAGE_TAG: latest
         run: |
-          # Build a docker container and
-          # push it to ECR so that it can
-          # be deployed to ECS.
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+          # Build the Docker image
+          docker build -t $ECR_LOGIN_URI/$ECR_REPOSITORY_NAME:$IMAGE_TAG .
+
+          # Push the Docker image to the public ECR repository
+          docker push $ECR_LOGIN_URI/$ECR_REPOSITORY_NAME:$IMAGE_TAG
           
             
